# waylander

./: .clang-format  README  README.md  generate_cxx_header_from_wayland_xml.py  meson.build  xml-protocol-tool
docs/: meson.build
docs/doxygen/: Doxyfile.in  meson.build
docs/sphinx/: conf.py.in  developing_guidelines.rst  doxygen_index.rst  fd_design.rst  gnulib_usage.rst  index.rst  meson.build  scope.rst  system_resource_conversions.dot  xml_to_cpp.rst
examples/: meson.build
examples/concept_demos/: indefinitly_blocking_pipe_io.cpp  meson.build
examples/wayland/: display_static_picture.cpp  list_registry_globals.cpp  meson.build
include/: bit_fiddling.hpp  byte_array.hpp  byte_vec.hpp  construct_allocator_adapter.hpp  foo.hpp  sstd.hpp  type_utils.hpp
include/gnu_utils/: fd_handle.hpp  local_stream_socket.hpp  memory_block.hpp  pipe.hpp
include/guilander/: byte_vec.hpp  sstd.hpp  type_utils.hpp
include/guilander/wayland/: connected_client.hpp  message_buffer.hpp  message_intrperter.hpp  message_overload_set.hpp  message_parser.hpp  message_utils.hpp  message_visitor.hpp  parsed_message.hpp  system_utils.hpp
include/guilander/wayland/protocols/: linux_dmabuf_v1_protocol.hpp  presentation_time_protocol.hpp  tablet_v2_protocol.hpp  viewporter_protocol.hpp  wayland_protocol.hpp  xdg_shell_protocol.hpp
include/linux_utils/: file_descriptor.hpp  shm_memory.hpp
include/wayland/: connected_client.hpp  generate_protocol_magic_numbers.py  message_buffer.hpp  message_intrperter.hpp  message_overload_set.hpp  message_parser.hpp  message_utils.hpp  message_visitor.hpp  parsed_message.hpp  protocol.hpp  protocol_primitives.hpp  system_utils.hpp
include/wayland/protocols/: linux_dmabuf_v1_protocol.hpp  presentation_time_protocol.hpp  tablet_v2_protocol.hpp  viewporter_protocol.hpp  wayland_protocol.hpp  xdg_shell_protocol.hpp
include/waylander/: byte_array.hpp  byte_vec.hpp  construct_allocator_adapter.hpp  sstd.hpp  type_utils.hpp
include/waylander/wayland/: connected_client.hpp  message_buffer.hpp  message_intrperter.hpp  message_overload_set.hpp  message_parser.hpp  message_utils.hpp  message_visitor.hpp  parsed_message.hpp  protocol_primitives.hpp  system_utils.hpp
include/waylander/wayland/protocols/: linux_dmabuf_v1_protocol.hpp  presentation_time_protocol.hpp  tablet_v2_protocol.hpp  viewporter_protocol.hpp  wayland_protocol.hpp  xdg_shell_protocol.hpp
src/: foo.cpp  main.cpp  meson.build  sstd.cpp
src/gnu_utils/: fd_handle.cpp  local_stream_socket.cpp  memory_block.cpp  meson.build  pipe.cpp
src/linux_utils/: file_descriptor.cpp  meson.build  shm_memory.cpp
src/wayland/: connected_client.cpp  meson.build  message_overload_set.cpp  message_parser.cpp  protocol.cpp  system_utils.cpp
subprojects/: .gitignore  gnulander.wrap  ut.wrap
subprojects/gnulib/: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  gnu_configure_meson_wrapper.sh  handle_for_meson.c  meson.build
subprojects/gnulib/autom4te.cache/: output.0  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
subprojects/gnulib/lib/: Makefile.am  Makefile.in  meson.build
subprojects/gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
tests/: meson.build  test_byte_buff.cpp  test_gnu_fd_handle.cpp  test_gnu_local_stream_socket.cpp  test_gnu_memory_block.cpp  test_gnu_pipe.cpp  test_linux_shm_memory.cpp  test_meson_guilander_dep.cpp  test_meson_guilander_headers_do_not_leak_macros.cpp  test_sstd_byte_array.cpp  test_sstd_construct_allocator_adapter.cpp  test_sstd_math.cpp  test_sstd_throw_system_error.cpp  test_sstd_tuple_utils.cpp  test_sstd_type_list.cpp  test_sstd_type_utils.cpp  test_sstd_unique_handle.cpp  test_unit_test.cpp  test_wayland_compositor.cpp  test_wayland_connected_client.cpp  test_wayland_message_buffer.cpp  test_wayland_message_parser.cpp  test_wayland_message_utils.cpp  test_wayland_message_visitor.cpp  test_wayland_primitive_types.cpp  test_wayland_system_utils.cpp  todo.md
